yamls/no-tpu-serv.yaml
apiVersion: v1
kind: Service
metadata:
  name: no-tpu-service
  namespace: without-affinity
spec:
  selector:
    app: "no-tpu"
  ports:
    - protocol: TCP
      port: 80
      targetPort: 12345
      nodePort: 30008
  type: NodePort
