yamls/ing-yes-tpu.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yes-tpu-serv-ingress
  namespace: with-affinity
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  ingressClassName: nginx
  rules:
  - host: grafanamk8s.info
    http:
      paths:
      - path: /yes-tpu(.*)
        pathType: Prefix
        backend:
          service:
            name: yes-tpu-service
            port:
              number: 80
  tls:
  - hosts:
    - grafanamk8s.info
    secretName: secret-affinity
